minio-standalone-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: minio
spec:
  type: NodePort

  ports:
    - port: 9001
      targetPort: 9000
      nodePort: 30333

  selector:
    app: minio
