minio_ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: minio
  namespace: minio
spec:
  ingressClassName: nginx
  rules:
  - host: minio.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-service
            port: 
              number: 9001
